<resources>
    <string name="app_name" translatable="false">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream_topping">Whipped Cream</string>
    <string name="chocolate_topping">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">Order</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank You!</string>
    <string name="order">Order</string>
    <string name="minimum_order">0 is the minimum!</string>
    <string name="maximum_order">100 is the maximum!</string>
    <string name="email_fail_send">Something went wrong with the email</string>
</resources>
